test/files/neg/t608.check
t608.scala:16: error: type mismatch;
 found   : hs{type a = ha}
 required: hs{type s = hs; type a = ha}
       = g(f(x).bimap(id))
                     ^
one error found
